@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020110609"
+#define public MagickPackageVersionAddendum ".020110613"
 #define public MagickPackageReleaseDate "unreleased"
