@@ -830,10 +830,9 @@ fully transparent.</dd>
 <div class="section" id="id55">
 <h2>Description</h2>
 <p>(void) SetImageType() sets the type of image.  Choose from these types:</p>
-<p>Bilevel        Grayscale       GrayscaleMatte
-Palette        PaletteMatte    TrueColor
-TrueColorMatte ColorSeparation ColorSeparationMatte
-OptimizeType</p>
+<p>BilevelType, GrayscaleType, GrayscaleMatteType, PaletteType,
+PaletteMatteType, TrueColorType, TrueColorMatteType,
+ColorSeparationType, ColorSeparationMatteType, OptimizeType</p>
 <p>The format of the (void) SetImageType method is:</p>
 <pre class="literal-block">
 ( void )SetImageType( <a class="reference external" href="../api/types.html#image">Image</a> *image, const <a class="reference external" href="../api/types.html#imagetype">ImageType</a> image_type );
