@@ -1,3 +1,9 @@
+2011-06-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/image.c (SetImageType): Fix documentation for enumeration
+	names. The types need "Type" as part of the name.  Problem was
+	reported by Brad Harder.
+
 2011-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* scripts/html_fragments.py (banner_template): HTML banner
